# alocalproxy

./: .gitignore  Anthill.puml  LICENSE  README.md  create_test_ssl_proxy.sh  example.puml  hsts  maninmiddle.md  manual_interception_script.md  overview.md  passwordInterceptScript.md  password_intercept.sh  plan.md  proxies.md  pyproject.toml  results.md  server.key.org  users.db
asymm_encrypt/: asymm_encrypt.py  asymm_encrypt2.py  conversation.txt  encrypt.py
chatgpt3proxy/: chatgpt3_conversation.txt  chatgptproxy.py
chatgpt3sslproxy/: ssl_chatgpts_coversation.txt  ssl_htttp_proxy.py  ssl_proxy.py
chatgpt3webserver/: init_db.py  pyproject.toml  reset_db.py  schema.sql  users.db  webserver.py  webserver_conversation.txt
chatgpt3webserver/templates/: home.html  login.html  signup.html
chatgpt3webserver2/: webserver2.py  webserver_conversation2.txt
counter/: counter.py
modifybody/: modifybody.py
test_chatgpt3webserver/: testwebserver.py
tests/: test_alocalproxy.py
