[tool.poetry]
name = "chatgpt3webserver"
version = "0.1.0"
description = "python webserver"
authors = ["ezzye <ezzy.elliott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
